// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend Snapshots No Children 1`] = `
<legend
  className="sc-AxjAm kISvsf"
/>
`;

exports[`Legend Snapshots No props 1`] = `
<legend
  className="sc-AxjAm kISvsf"
>
  This is a legend
</legend>
`;
